css/base.css
html, body {
    width: 100%;
}

html {
    font: normal 100% Helvetica, Arial, sans-serf;
    overflow: hidden;
}

body {
    color: rgb(25, 25, 25);
    margin: 0;
}

button {
    border: 0;
    background: transparent;
    font-size: 1em;
    line-height: 1em;
}

dd, dt, h1, h2, h3, h4, h5, h6, li, p, ul, ol {
    margin: 0;
    padding: 0;
    font-size: 1em;
    font-weight: inherit;
    line-height: inherit;
}

ol, p, ul {
    margin-top: 1.5em;
}

li, p {
    line-height: 1.5em;
}

li {
    margin-left: 1.5em;
}

